Adding Angular Material

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Studio Labs - Saving the world</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <base href="/">
 </head>
 <body>
